Finalizando o Curso Módulo 1

--- a/AtalhosHTML-CSS3.html
+++ b/AtalhosHTML-CSS3.html
@@ -34,6 +34,9 @@ HTML5:
         Para selecionar varios lugares e alterar ou apagar vários pontos de uma vez, basta segurar o Alt e ir selecionando, após selecionado pode soltar o Alt e realizar a alteração desejada.
         Para finalizar, basta clicar em algum lugar.
 
+    Criar arquivo direto no texto
+
+        Por exemplo eu criei um link com a tag "A" página2.html, só que essa pagina2 não existe arquivo ainda, então eu pressiono o Crtrl+clique, vai aparecer um aviso na tela perguntando se deseja criar este arquivo, clica em sim, e o arquivo é gerado automaticamente.
     
 
 
