--- a/Projeto/Oxalá e Logunan.html
+++ b/Projeto/Oxalá e Logunan.html
@@ -46,7 +46,7 @@
 
                 <div style="text-align: right;"><a href="https://aminoapps.com/c/wiccaebruxaria/page/blog/trono-da-fe-oxala-e-logunan-oya-tempo/D8Vq_lvRiPuxXbk4rMB1wkKN66wbNbvJMxZ"><i>Fonte: Amino Wicca e Bruxaria</i> </a></div>
 
-                
+                <a style="font-size: 30px; font-style: italic;" href="index.html"> Voltar</a>
 
 
 
