--- a/Projeto/historiadaumbanda.html
+++ b/Projeto/historiadaumbanda.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="imagens/favbrasil.ico" type="image/x-icon">
 </head>
 <body>
+    
     <h1>Origem da Umbanda</h1>
     <p>Considera-se o marco fundador da umbanda um evento ocorrido numa sessão espírita realizada no dia 15 de novembro de 1908, na cidade de Niterói (RJ), quando o jovem Zélio Fernandino de Moraes (de 17 anos) “recebeu” o espírito do Caboclo das Sete Encruzilhadas. Foi nesse dia que a umbanda foi “anunciada”. <br>
 
@@ -31,4 +32,5 @@ Da matriz africana, a umbanda assimilou, entre outras coisas, o culto aos orixá
     <picture>
         <img src="imagens/tendazelio.png" alt="" srcset="">
     </picture>
-</body>
+<br>
+    <a style="font-size: 30px; font-style: italic;" href="index.html"> Voltar</a>
