--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -37,7 +37,7 @@
         <li>Linhas e Falanges</li>
         <li>Pontos</li>
             <ul>
-                <li>Caboclo</li>
+                <li> <a href="CabocloPonto.html" target="_blank">Caboclo</a> </li>
                 <li>Preto Velho</li>
                 <li>Exu e Pombo Gira</li>
                 <li>Orixás</li>
@@ -45,7 +45,7 @@
         <li>Mídia</li>
             <ul>
                 <li>Livros</li>
-                <li>Canais no Youtube</li>
+                <li> <a href="CanaisYoutube.html" target="_blank" rel="noopener noreferrer">Canais no Youtube</a> </li>
             </ul>
             
     </ul>
